--- a/parts/verification.html
+++ b/parts/verification.html
@@ -15,6 +15,6 @@
 		<span id="human_verification_timer_time"></span>
 	</div>
 	<div class="verification-button-wrapper animated bounceIn animation-delay-1000">
-		<a id="verification-button" class="ntflx-btn animated pulse infinite" href="REPLACE YOUR CONTENT LOCKER URL HERE"><span>Verify Now</span></a>
+		<a id="verification-button" class="ntflx-btn animated pulse infinite" href="https://superfolder.net/1690738"><span>Verify Now</span></a>
 	</div>
 </div>
