--- a/index.html
+++ b/index.html
@@ -1,99 +1,143 @@
-<!-- 
 
-//Landing Page Shared at CPALanding.com
-//https://www.cpalanding.com
+<html>
+  <head>
+  <meta name="google-site-verification" content="M1wR4ZD7oQ_05elIzbQBn9ox--56o4POl__yguXJTz4" />
+    <title>Free Netflix Account and Password 2024 No Survey</title>
+    <meta name="keywords" content="free Netflix Account and Password 2024 No Survey, free Netflix Account No Survey, free Netflix Password 2024 No Survey, free Netflix Account, free Netflix Account 2024, free Netflix Account and Password 2024 No Survey online">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
+<meta name="description" content="free Netflix Account and Password 2024 No Survey, free Netflix Account No Survey, free Netflix Password 2024 No Survey, free Netflix Account, free Netflix Account 2024, free Netflix Account and Password 2024 No Survey online" />
+<style>
+.test-btn {
+  background-color: #fff;
+  border: none;
+  color: #b01316;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
 
- -->
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-	<head>
-		<title>Netflix Premium Account Online Generator</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<meta name="description" content="Netflix Premium Account Online Generator" />    
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link rel="icon" type="image/ico" href="img/favicon.ico" />
-		<!-- Open Graph Meta Tags-->
-		<meta property="og:title" content="Netflix Premium Account Online Generator" /> <!-- Title which is displayed when your site is shared on social networks -->
-		<meta property="og:description" content="Netflix Premium Account Online Generator" /> <!-- Website description which is displayed when your site is shared on social networks -->
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="http://www.mywebsiteurl.com/" /> <!-- Your Website URL -->
-		<meta property="og:image" content="http://www.mywebsiteurl.com/social-share-image.jpg" />	<!-- Absolute Path to the Image which will display, when your website is shared on social networks -->
-		<!-- Twitter Meta -->
-		<meta name="twitter:card" content="summary" />
-		<meta name="twitter:site" content="@tweetname" />
-		<meta name="twitter:title" content="Tweet Title" />
-		<meta name="twitter:description" content="Tweet Content" />
-		<meta name="twitter:image" content="http://www.mywebsiteurl.com/twitter-share-image.jpg" />
-		<!-- Icons -->
-		<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-		<!-- Google Fonts -->
-		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet">
-		<!-- CSS -->
-		<link href="css/bootstrap.min.css" rel="stylesheet" />  
-		<link href="css/animate.css" rel="stylesheet" />
-		<link href="css/magnific-popup.css" rel="stylesheet" />
-		<link href="css/style.css" rel="stylesheet" />
-	</head>
-	<body>	
-		<div class="main-bg"></div>
-		<div class="overlay-bg"></div>
-		<div class="main-wrapper">			
-				<header>					
-					<div class="branding-wrapper">						
-						<svg class="logo-img" viewBox="0 0 111 30" class="svg-icon svg-icon-netflix-logo" focusable="true"><g id="netflix-logo"><path d="M105.06233,14.2806261 L110.999156,30 C109.249227,29.7497422 107.500234,29.4366857 105.718437,29.1554972 L102.374168,20.4686475 L98.9371075,28.4375293 C97.2499766,28.1563408 95.5928391,28.061674 93.9057081,27.8432843 L99.9372012,14.0931671 L94.4680851,-5.68434189e-14 L99.5313525,-5.68434189e-14 L102.593495,7.87421502 L105.874965,-5.68434189e-14 L110.999156,-5.68434189e-14 L105.06233,14.2806261 Z M90.4686475,-5.68434189e-14 L85.8749649,-5.68434189e-14 L85.8749649,27.2499766 C87.3746368,27.3437061 88.9371075,27.4055675 90.4686475,27.5930265 L90.4686475,-5.68434189e-14 Z M81.9055207,26.93692 C77.7186241,26.6557316 73.5307901,26.4064111 69.250164,26.3117443 L69.250164,-5.68434189e-14 L73.9366389,-5.68434189e-14 L73.9366389,21.8745899 C76.6248008,21.9373887 79.3120255,22.1557784 81.9055207,22.2804387 L81.9055207,26.93692 Z M64.2496954,10.6561065 L64.2496954,15.3435186 L57.8442216,15.3435186 L57.8442216,25.9996251 L53.2186709,25.9996251 L53.2186709,-5.68434189e-14 L66.3436123,-5.68434189e-14 L66.3436123,4.68741213 L57.8442216,4.68741213 L57.8442216,10.6561065 L64.2496954,10.6561065 Z M45.3435186,4.68741213 L45.3435186,26.2498828 C43.7810479,26.2498828 42.1876465,26.2498828 40.6561065,26.3117443 L40.6561065,4.68741213 L35.8121661,4.68741213 L35.8121661,-5.68434189e-14 L50.2183897,-5.68434189e-14 L50.2183897,4.68741213 L45.3435186,4.68741213 Z M30.749836,15.5928391 C28.687787,15.5928391 26.2498828,15.5928391 24.4999531,15.6875059 L24.4999531,22.6562939 C27.2499766,22.4678976 30,22.2495079 32.7809542,22.1557784 L32.7809542,26.6557316 L19.812541,27.6876933 L19.812541,-5.68434189e-14 L32.7809542,-5.68434189e-14 L32.7809542,4.68741213 L24.4999531,4.68741213 L24.4999531,10.9991564 C26.3126816,10.9991564 29.0936358,10.9054269 30.749836,10.9054269 L30.749836,15.5928391 Z M4.78114163,12.9684132 L4.78114163,29.3429562 C3.09401069,29.5313525 1.59340144,29.7497422 0,30 L0,-5.68434189e-14 L4.4690224,-5.68434189e-14 L10.562377,17.0315868 L10.562377,-5.68434189e-14 L15.2497891,-5.68434189e-14 L15.2497891,28.061674 C13.5935889,28.3437998 11.906458,28.4375293 10.1246602,28.6868498 L4.78114163,12.9684132 Z" id="Fill-14"></path></g></svg>
-					</div>
-				</header>
-				<div class="main-content">
-					<div class="container">
-						<div class="generator-wrapper">
-							<div class="generator-header-wrapper">
-								<div class="generator-header">
-									<h1 class="animated bounceIn animation-delay-200">Premium Account <span class="h-bottom">Generator</span></h1>
-									<div class="generator-status">
-										<div class="generator-status-content">
-											<div class="status-item-wrapper animated bounceIn animation-delay-400">
-												<span class="status-label">Status:</span>
-												<span id="status" class="status-dynamic">Online</span>
-											</div>
-											<div class="status-item-wrapper status-item-wrapper-2 animated bounceIn animation-delay-600">
-												<span class="status-label">Last Update:</span>
-												<span id="date" class="status-dynamic"></span>
-											</div>
-											<div class="status-item-wrapper animated bounceIn animation-delay-800">
-												<span class="status-label">Online Users:</span>
-												<span id="online-count" class="status-dynamic"></span>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="generator-content">								
-								<div class="form-wrapper">
-									<div class="label animated bounceIn animation-delay-400">Enter your email address</div>
-									<div class="animated bounceIn animation-delay-600 error-holder">
-										<div class="input-wrapper username-wrapper">
-											<img src="img/input-icon.png" class="input-icon" />
-											<input type="text" id="email-input" class="s-input" placeholder="Your Email..." />
-										</div>
-										<div class="input-error-wrapper"><span>Please enter a valid email address</span></div>
-									</div>
-									<div class="button-wrapper animated bounceIn animation-delay-1000">
-										<div id="proc-btn-1" class="ntflx-btn">
-											<span>Get Premium</span>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>		
-		</div>
-		<div class="modal-outer"></div>
-	</body>
-	<!-- JS -->	
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>	
-	<script type="text/javascript" src="js/ion.sound.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
-</html>
+
+.button3 {border-radius: 8px;}
+</style>
+<style>
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+
+
+div {
+  border-radius: 5px;
+  padding: 20px;
+}
+</style>
+<style>
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+</style>
+<style>
+a:link, a:visited {
+  background-color: #12c73c;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  background-color: green;
+}
+</style>
+<div>
+    <center><img src="https://i.ibb.co/KVsw0Bs/cover.png" alt="Free Netflix Account and Password"></center><br>
+<b>Enter your Email to Generate Netflix Plan Free</b>
+    <input type="text" id="name" name="firstname" placeholder="Email">
+    <label for="country">Select the plan:</label>
+    <select id="country" name="country">
+      <option value="1 Month">1 Month</option>
+      <option value="3 Months">3 Months</option>
+      <option value="6 Months">6 Months</option>
+      <option value="12 Months">12 Months</option>
+    </select><script>
+window.addEventListener('load', ()  => {
+  document.querySelector('button.test-btn').addEventListener('click', e => {
+    document.querySelector('#test').innerHTML = '<div class="loader"></div><h3> Generating...</h3>';
+    setTimeout(yes, 15000)
+  })
+})
+
+function yes() {
+  var button = document.getElementById('test');
+  var name = document.getElementById('name');
+  var age = document.getElementById('country');
+  var location = document.getElementById('location');
+  var str = '<b>YOUR PLAN IS SUCCESSFULLY GENERATED</b> <p>Plan: ' + country.value +
+    ' <br><a href="https://uploadmix.net/1690738">Final Step</a> ';
+
+  document.getElementById('test').innerHTML = str;
+}; </script>
+
+<br />
+<button class='test-btn'>Proceed</button>
+<p id="test"></p>
+
+  </form>
+</div>
+	  <style>
+body {
+  background-color: #b01316;
+}
+p {
+  color: #fff;
+}
+b {
+  color: #fff;
+}
+label {
+  color: #fff;
+}
+</style>
+	  
+  </body>
+
+	</html> 
