--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ a:hover, a:active {
 }
 </style>
 <div>
-    <center><img src="https://i.ibb.co/KVsw0Bs/cover.png" alt="Free Netflix Account and Password"></center><br>
+    <center><img src="slogo.png" alt="Free Netflix Account and Password"></center><br>
 <b>Enter your Email to Generate Netflix Plan Free</b>
     <input type="text" id="name" name="firstname" placeholder="Email">
     <label for="country">Select the plan:</label>
@@ -125,7 +125,7 @@ function yes() {
 </div>
 	  <style>
 body {
-  background-color: #b01316;
+  background-image: url("bg.png");
 }
 p {
   color: #fff;
