--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ a:hover, a:active {
   background-color: green;
 }
 </style>
-	  <center><img src="slogo.png" alt="Free Netflix Account and Password" style="width:500px;height:100px;></center>
+	  <center><img src="slogo.png" alt="Free Netflix Account and Password" style="width:500px;height:100px;"></center>
 <div>
     <br>
 <b>Enter your Email to Generate Netflix Plan Free</b>
