--- a/index.html
+++ b/index.html
@@ -1,97 +1,96 @@
-
-<html>
-  <head>
-  <meta name="google-site-verification" content="M1wR4ZD7oQ_05elIzbQBn9ox--56o4POl__yguXJTz4" />
-    <title>Free Netflix Account and Password 2024 No Survey</title>
-    <meta name="keywords" content="free Netflix Account and Password 2024 No Survey, free Netflix Account No Survey, free Netflix Password 2024 No Survey, free Netflix Account, free Netflix Account 2024, free Netflix Account and Password 2024 No Survey online">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
-<meta name="description" content="free Netflix Account and Password 2024 No Survey, free Netflix Account No Survey, free Netflix Password 2024 No Survey, free Netflix Account, free Netflix Account 2024, free Netflix Account and Password 2024 No Survey online" />
-<style>
-.test-btn {
-  background-color: #fff;
-  border: none;
-  color: #b01316;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-
-
-.button3 {border-radius: 8px;}
-</style>
-<style>
-input[type=text], select {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-input[type=submit] {
-  width: 100%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-
-
-div {
-  border-radius: 5px;
-  padding: 20px;
-}
-</style>
-<style>
-.loader {
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 2s linear infinite; /* Safari */
-  animation: spin 2s linear infinite;
-}
-
-/* Safari */
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-</style>
-<style>
-a:link, a:visited {
-  background-color: #12c73c;
-  color: white;
-  padding: 14px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
-
-a:hover, a:active {
-  background-color: green;
-}
-</style>
-	  <center><img src="slogo.png" alt="Free Netflix Account and Password" style="width:500px;height:100px;"></center>
-<div>
-    <br>
-<b>Enter your Email to Generate Netflix Plan Free</b>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="M1wR4ZD7oQ_05elIzbQBn9ox--56o4POl__yguXJTz4">
+  <title>Free Netflix Account and Password 2024 No Survey</title>
+  <meta name="keywords" content="free Netflix Account and Password 2024 No Survey, free Netflix Account No Survey, free Netflix Password 2024 No Survey, free Netflix Account, free Netflix Account 2024, free Netflix Account and Password 2024 No Survey online">
+  <meta name="description" content="free Netflix Account and Password 2024 No Survey, free Netflix Account No Survey, free Netflix Password 2024 No Survey, free Netflix Account, free Netflix Account 2024, free Netflix Account and Password 2024 No Survey online">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
+  <style>
+    body {
+      font-family: 'Open Sans', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-image: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhEp2KqpWOnMD6OG85WKDOy6Y2GGn7-hmj2SdTtlMSp0LquTz4rmTN3dsCV-T4PJz6PnjLLw_kkcyoSvUZHNvCcOqpGq7_OcIW57Ppwb_wx8dDKzcQcck8yFiHY2msTlatWM0eEeFg9bpck7BWn-d-IJrxgpxRcHiWEwORcuAGB99wYlz42bOrpNm0aOFE/s1600/bg.jpg");
+      background-size: cover;
+      background-position: center;
+      color: #fff;
+      text-align: center;
+    }
+    img {
+      max-width: 90%;
+      height: auto;
+      margin: 20px auto;
+    }
+    input[type="text"], select, input[type="submit"] {
+      width: 90%;
+      max-width: 400px;
+      padding: 12px;
+      margin: 10px auto;
+      display: block;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
+    .test-btn {
+      background-color: #fff;
+      border: none;
+      color: #b01316;
+      padding: 15px 25px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 18px;
+      margin: 10px 0;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .test-btn:hover {
+      background-color: #f0f0f0;
+    }
+    .loader {
+      border: 8px solid #f3f3f3;
+      border-radius: 50%;
+      border-top: 8px solid #3498db;
+      width: 60px;
+      height: 60px;
+      animation: spin 2s linear infinite;
+      margin: 20px auto;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+    a:link, a:visited {
+      background-color: #12c73c;
+      color: white;
+      padding: 14px 25px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 10px;
+    }
+    a:hover, a:active {
+      background-color: green;
+    }
+    @media (max-width: 768px) {
+      body {
+        padding: 10px;
+      }
+      input[type="text"], select, input[type="submit"] {
+        width: 100%;
+      }
+    }
+  </style>
+</head>
+<body>
+  <center>
+    <img src="slogo.png" alt="Free Netflix Account and Password">
+  </center>
+  <div>
+    <b>Enter your Email to Generate Netflix Plan Free</b>
     <input type="text" id="name" name="firstname" placeholder="Email">
     <label for="country">Select the plan:</label>
     <select id="country" name="country">
@@ -99,48 +98,27 @@ a:hover, a:active {
       <option value="3 Months">3 Months</option>
       <option value="6 Months">6 Months</option>
       <option value="12 Months">12 Months</option>
-    </select><script>
-window.addEventListener('load', ()  => {
-  document.querySelector('button.test-btn').addEventListener('click', e => {
-    document.querySelector('#test').innerHTML = '<div class="loader"></div><h3> Generating...</h3>';
-    setTimeout(yes, 15000)
-  })
-})
+    </select>
+    <button class="test-btn">Proceed</button>
+    <p id="test"></p>
+  </div>
+  <script>
+    window.addEventListener('load', () => {
+      document.querySelector('.test-btn').addEventListener('click', () => {
+        document.querySelector('#test').innerHTML = '<div class="loader"></div><h3>Generating...</h3>';
+        setTimeout(yes, 15000);
+      });
+    });
 
-function yes() {
-  var button = document.getElementById('test');
-  var name = document.getElementById('name');
-  var age = document.getElementById('country');
-  var location = document.getElementById('location');
-  var str = '<b>YOUR PLAN IS SUCCESSFULLY GENERATED</b> <p>Plan: ' + country.value +
-    ' <br><a href="https://uploadmix.net/1690738">Final Step</a> ';
-
-  document.getElementById('test').innerHTML = str;
-}; </script>
-
-<br />
-<button class='test-btn'>Proceed</button>
-<p id="test"></p>
-
-  </form>
-</div>
-	  <style>
-body {
-  background-image: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhEp2KqpWOnMD6OG85WKDOy6Y2GGn7-hmj2SdTtlMSp0LquTz4rmTN3dsCV-T4PJz6PnjLLw_kkcyoSvUZHNvCcOqpGq7_OcIW57Ppwb_wx8dDKzcQcck8yFiHY2msTlatWM0eEeFg9bpck7BWn-d-IJrxgpxRcHiWEwORcuAGB99wYlz42bOrpNm0aOFE/s1600/bg.jpg");
-}
-p {
-  color: #fff;
-}
-b {
-  color: #fff;
-}
-label {
-  color: #fff;
-}
-</style>
-	  
-  </body>
-   <!-- Histats.com  START  (aync)-->
+    function yes() {
+      const country = document.getElementById('country').value;
+      document.getElementById('test').innerHTML = `
+        <b>YOUR PLAN IS SUCCESSFULLY GENERATED</b>
+        <p>Plan: ${country}<br><a href="https://uploadmix.net/1690738">Final Step</a></p>
+      `;
+    }
+  </script>
+	   <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4802004,4,0,0,0,00010000']);
 _Hasync.push(['Histats.fasi', '1']);
@@ -150,6 +128,7 @@ var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async
 hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4802004&101" alt="cool hit counter" border="0"></a></noscript>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4802004&101" alt="web statistics" border="0"></a></noscript>
 <!-- Histats.com  END  -->
-	</html> 
+</body>
+</html>
